fixed spacing underneath float, changed background color, edited copy

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,7 @@
 body {
-  background-color: darkgray;
+  background-color: #E4DFDC;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 10%;
-  
 }
 
 h2 {
@@ -13,10 +12,15 @@ h3 {
   color: #222;
 }
 
+h5 {
+  font-weight: normal;
+}
+
 .profile {
   float: left;
   padding-right: 40px;
   padding-bottom: 30px;
+  height: 300px;
 }
 
 img  {
@@ -24,5 +28,17 @@ img  {
 }
 
 .header {
-  padding: 80px 0;
+  padding: 120px 0;
+}
+
+.content {
+  margin-top: 40px;
+  max-width: 400px;
+  float: left;
+  padding-right: 50px;
+}
+
+.it {
+  font-style: italic;
+  color: #777;
 }
